--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                 <ul class="item-list">
                     <li>
                         <div class="text-content">
-                            <p>Estudiante de Administración de Negocios en la Universidad Católica San Pablo, actualmente cursando el sexto ciclo.</p>
+                            <p>Soy Katherin Velásquez, estudiante de la carrera de Administración de Negocios en la Universidad Católica San Pablo. Me especializo en el área de Finanzas Corporativas y Microfinanzas. Además, tengo una segunda especialización enfocada en startups y emprendimiento. Paralelamente, he desarrollado diversos proyectos de impacto social de manera independiente.</p>
                         </div>
                         <!-- The image has been removed from this section -->
                     </li>
@@ -435,12 +435,39 @@
             </h2>
             <div id="companions-content">
                 <ul class="simple-list">
+                    <li><a href="https://www.linkedin.com/in/ecuadrosv/" target="_blank">Dr. ERNESTO CUADROS VARGAS</a></li>
                     <li><a href="https://www.linkedin.com/in/franklin-hilari%C3%B3n/" target="_blank">Franklin Hilarión</a></li>
+                    <li><a href="https://pe.linkedin.com/in/mar%C3%ADa-a-quinto-g-7920b3358" target="_blank">María A. Quinto G.</a></li>
+                    <li><a href="https://www.linkedin.com/in/joaquin-carlos-huamani-arroyo-409088358" target="_blank">Joaquin Carlos Huamani Arroyo</a></li>
+                    <li><a href="https://www.linkedin.com/in/krislet-yahaira-juarez-arce-a97570357" target="_blank">Krislet Yahaira Juarez Arce</a></li>
+                    <li><a href="https://www.linkedin.com/in/leonardo-cruz-mamani-a6888418b" target="_blank">Leonardo Cruz Mamani</a></li>
+                    <li><a href="https://www.linkedin.com/in/fabi%C3%A1n-cayo-calcina-177709219" target="_blank">Fabián Cayo Calcina</a></li>
+                    <li><a href="https://www.linkedin.com/in/pedro-f-z-flores-guti%C3%A9rrez-415753365" target="_blank">Pedro F. Z. Flores Gutiérrez</a></li>
+                    <li><a href="https://www.linkedin.com/in/leyla-diney-rosas-ccama-872415369" target="_blank">Leyla Diney Rosas Ccama</a></li>
+                    <li><a href="https://www.linkedin.com/in/gustavo-jes%C3%BAs-montoya-durand-b66655357" target="_blank">Gustavo Jesús Montoya Durand</a></li>
+                    <li><a href="https://www.linkedin.com/in/brad-caleb-l%C3%B3pez-parizaca-052876357" target="_blank">Brad Caleb López Parizaca</a></li>
+                    <li><a href="https://linkedin.com/in/arianna-aylin-arenas-zevallos-15a203357" target="_blank">Arianna Aylin Arenas Zevallos</a></li>
+                    <li><a href="https://www.linkedin.com/in/joseph-christian-condori-ramos-236645210" target="_blank">Joseph Christian Condori Ramos</a></li>
+                    <li><a href="https://www.linkedin.com/in/jos%C3%A9-valdivia-ju%C3%A1rez-b60b08357" target="_blank">José Valdivia Juárez</a></li>
+                    <li><a href="https://www.linkedin.com/in/romina-llanos-campos-73983b340" target="_blank">Romina Llanos Campos</a></li>
+                    <li><a href="https://www.linkedin.com/in/maysha-micaela-torres-coasaca-178508359" target="_blank">Maysha Micaela Torres Coasaca</a></li>
+                    <li><a href="https://pe.linkedin.com/in/piero-polar-salazar-7807b0357" target="_blank">Piero Polar Salazar</a></li>
+                    <li><a href="https://www.linkedin.com/in/lourdes-camila-pinto-astoquilca-a7b391366" target="_blank">Lourdes Camila Pinto Astoquilca</a></li>
+                    <li><a href="https://www.linkedin.com/in/mharco-jacob-ii-paricahua-akutak-2202a4259" target="_blank">Mharco Jacob II Paricahua Akutak</a></li>
+                    <li><a href="https://pe.linkedin.com/in/brenda-berenice-rojas-rodr%C3%ADguez-797b07276" target="_blank">Brenda Berenice Rojas Rodríguez</a></li>
+                    <li><a href="https://www.linkedin.com/in/nicole-rodriguez-alvarez-7438a22b1" target="_blank">Nicole Rodriguez Alvarez</a></li>
+                    <li><a href="https://www.linkedin.com/in/yaneli-pilar-condori-condori-3aaa30357" target="_blank">Yaneli Pilar Condori Condori</a></li>
+                    <li><a href="https://www.linkedin.com/in/alessandra-sof%C3%ADa-melella-zapata-b52253367" target="_blank">Alessandra Sofía Melella Zapata</a></li>
+                    <li><a href="https://www.linkedin.com/in/angueli-calder%C3%B3n-ccama-7b20122a5" target="_blank">Angueli Calderón Ccama</a></li>
+                    <li><a href="https://www.linkedin.com/in/ana-belen-villagomez-5309a9358" target="_blank">Ana Belen Villagomez</a></li>
+                    <li><a href="https://pe.linkedin.com/in/jhoselyn-fiorella-huayta-hinojosa-240a0b36a" target="_blank">Jhoselyn Fiorella Huayta Hinojosa</a></li>
+                    <li><a href="https://www.linkedin.com/in/salvador-domingo-arenas-bellido-35838536b" target="_blank">Salvador Domingo Arenas Bellido</a></li>
+                    <li><a href="https://www.linkedin.com/in/alanis-escobar-6a697736b" target="_blank">Alanis Escobar</a></li>
                 </ul>
             </div>
         </section>
 
-        <!-- New Contacts Section -->
+        <!-- New Contacts Section (Updated with all the provided links) -->
         <section id="contactos-section" class="section-block">
             <h2>
                 <i class="fas fa-address-book"></i> Contactos:
@@ -448,7 +475,65 @@
             <div id="contacts-content">
                 <ul class="simple-list">
                     <li><a href="https://franklinhilarion.github.io/franklinhilarion/" target="_blank">Franklin Hilarión (Portafolio)</a></li>
-                    <!-- You can add more contacts here if you wish -->
+                    <li><a href="https://mariafernandaapazameza.github.io/Maria-Fernanda-Apaza-Meza/" target="_blank">María Fernanda Apaza Meza</a></li>
+                    <li><a href="https://mariaquintog.github.io/" target="_blank">María Quinto G.</a></li>
+                    <li><a href="https://joaquin200712.github.io/" target="_blank">Joaquin</a></li>
+                    <li><a href="https://krisletyahairajuarezarce.github.io/Krislet-Yahaira-Juarez-Arce/" target="_blank">Krislet Yahaira Juarez Arce</a></li>
+                    <li><a href="https://leonardocruzmamani28.github.io/" target="_blank">Leonardo Cruz Mamani</a></li>
+                    <li><a href="https://melanydelca.github.io/" target="_blank">Melany Delca</a></li>
+                    <li><a href="https://fabianrodrigocayocalcina.github.io/" target="_blank">Fabian Rodrigo Cayoca Calcina</a></li>
+                    <li><a href="https://thirzaalexkacansayaescobedo.github.io/ThirzaCansaya/" target="_blank">Thirza Alexka Cansaya Escobedo</a></li>
+                    <li><a href="https://pedro191102.github.io/Pedro-Fabian-Zahir-Flores-Gutierrez/" target="_blank">Pedro Fabian Zahir Flores Gutierrez</a></li>
+                    <li><a href="https://leylarosas.github.io/Leyla-Rosas-P-ginaWeb/" target="_blank">Leyla Rosas</a></li>
+                    <li><a href="https://gustavojesusmontoyadurand.github.io/Gustavo-Jesus-Montoya-Durand/" target="_blank">Gustavo Jesus Montoya Durand</a></li>
+                    <li><a href="https://caleb19-666.github.io/pagina-shrek/" target="_blank">Caleb (pagina-shrek)</a></li>
+                    <li><a href="https://ariannaarenas.github.io/ariannaaylinarenaszevallos/" target="_blank">Arianna Aylin Arenas Zevallos</a></li>
+                    <li><a href="https://maria-035.github.io/maria.montoya.cardenas-/" target="_blank">Maria Montoya Cardenas</a></li>
+                    <li><a href="https://assli33.github.io/Assli-_Laura-_Calizaya-_Bejar/" target="_blank">Assli Laura Calizaya Bejar</a></li>
+                    <li><a href="https://blancayamilet1.github.io/Blanca-Yamilet-Gutierrez-Llave/" target="_blank">Blanca Yamilet Gutierrez Llave</a></li>
+                    <li><a href="https://jenniferelianachecya1.github.io/Jennifer-Eliana-Checya-Soncco/" target="_blank">Jennifer Eliana Checya Soncco</a></li>
+                    <li><a href="https://flrosario.github.io/PaginaWeb/" target="_blank">F. Rosario</a></li>
+                    <li><a href="https://essie-torres.github.io/mi-sitio-web/" target="_blank">Essie Torres</a></li>
+                    <li><a href="https://jano2112.github.io/Jose-Alejandro-Valdivia-Juarez/" target="_blank">Jose Alejandro Valdivia Juarez</a></li>
+                    <li><a href="https://taniayurn.github.io/Tania-Yurnet-Chuctaya-Cjuno/" target="_blank">Tania Yurnet Chuctaya Cjuno</a></li>
+                    <li><a href="https://crimsonkiller18.github.io/Piero-Polar-Salazar/" target="_blank">Piero Polar Salazar</a></li>
+                    <li><a href="https://lourdespinto.github.io/Lourdes-Camila-Pinto-Astoquilca/" target="_blank">Lourdes Camila Pinto Astoquilca</a></li>
+                    <li><a href="https://mparicahua.github.io/mharcoParicahua.github.io/" target="_blank">Mharco Paricahua</a></li>
+                    <li><a href="https://brenda-berenice-rojas-rodriguez.github.io/brendaberenicerojasrodriguez/" target="_blank">Brenda Berenice Rojas Rodriguez</a></li>
+                    <li><a href="https://christopher110011.github.io/mipagina/" target="_blank">Christopher</a></li>
+                    <li><a href="https://nicole131102.github.io/Mi-pagina-web/" target="_blank">Nicole</a></li>
+                    <li><a href="https://zumzum02.github.io/Paolo-Lovon-Orozco/" target="_blank">Paolo Lovon Orozco</a></li>
+                    <li><a href="https://yanelipilarcondoricondori.github.io/" target="_blank">Yaneli Pilar Condori Condori</a></li>
+                    <li><a href="https://alessandrasofiamelellazapata.github.io/mi-web-personal/" target="_blank">Alessandra Sofia Melella Zapata</a></li>
+                    <li><a href="https://angueli08.github.io/Angueli-Briyith-Calderon-Ccama/" target="_blank">Angueli Briyith Calderon Ccama</a></li>
+                    <li><a href="https://jhoselynfiorellahuaytahinojosa.github.io/" target="_blank">Jhoselyn Fiorella Huayta Hinojosa</a></li>
+                    <li><a href="https://salvadorarenas.neocities.org/" target="_blank">Salvador Arenas</a></li>
+                    <li><a href="https://esthefani-manuela-rivera-gonzales.github.io/Pweb02/#" target="_blank">Esthefani Manuela Rivera Gonzales</a></li>
+                    <li><a href="https://an111ss.github.io/Alanis-Victoria-Escobar-Rojas/Alanis-Victoria-Escobar-Rojas/index.html" target="_blank">Alanis Victoria Escobar Rojas</a></li>
+                    <li><a href="https://kakolik125.github.io/patriciomm.github.io/" target="_blank">Patricia M.M.</a></li>
+                    <li><a href="https://samy23-maker.github.io/Sandra-Xiomara-Turpo-Vera/" target="_blank">Sandra Xiomara Turpo Vera</a></li>
+                    <li><a href="https://gianvp.github.io/proyecto_ICC/" target="_blank">Gian V.P.</a></li>
+                    <li><a href="https://alexandrafabiola.github.io/alexandra-escobedo/" target="_blank">Alexandra Escobedo</a></li>
+                    <li><a href="https://kimberly230705.github.io/Kinverli-Masiel-Rodriguez-Escarza/" target="_blank">Kinverli Masiel Rodriguez Escarza</a></li>
+                    <li><a href="https://yeseniabpd.github.io/Yesenia-Bel-n-Portillo-Duran/" target="_blank">Yesenia Belén Portillo Duran</a></li>
+                    <li><a href="https://dagh-dagh.github.io/duanygonzales.github.io/" target="_blank">Duany Gonzales</a></li>
+                    <li><a href="https://hagriw.github.io/Anapaula-Lucero-Gamio-Villegas/" target="_blank">Anapaula Lucero Gamio Villegas</a></li>
+                    <li><a href="https://mary-ann-antonella-aranibar-guillen.github.io/myweb/" target="_blank">Mary Ann Antonella Aranibar Guillen</a></li>
+                    <li><a href="https://yordy-one.github.io/YordySmith.RamosMasco.github.io/" target="_blank">Yordy Smith Ramos Masco</a></li>
+                    <li><a href="https://darrylpagweb.github.io/darrylpagweb/" target="_blank">Darryl</a></li>
+                    <li><a href="https://fannymca.github.io/Fanny-Milagros-Cacya-Arequipa-/" target="_blank">Fanny Milagros Cacya Arequipa</a></li>
+                    <li><a href="https://kleiver-kerwin-salas-chavez.github.io/primerapagina/" target="_blank">Kleiver Kerwin Salas Chavez</a></li>
+                    <li><a href="https://abelcutire.github.io/" target="_blank">Abel Cutire</a></li>
+                    <li><a href="https://anghelyquis.github.io/Anghely-Quis.github.io/" target="_blank">Anghely Quis</a></li>
+                    <li><a href="https://anyh3ly.github.io/AnyhelyColcaMamani.github.io/" target="_blank">Anyhely Colca Mamani</a></li>
+                    <li><a href="https://m3ry789.github.io/githubpage/" target="_blank">M3ry</a></li>
+                    <li><a href="https://fiorela1923.github.io/Fiorela-Mayerlin-Condori-Cha-a-/" target="_blank">Fiorela Mayerlin Condori Cha&#241;a</a></li>
+                    <li><a href="https://diegovelasquez123.github.io/diegovelasquez.github.io/" target="_blank">Diego Velasquez</a></li>
+                    <li><a href="https://alejandrosuarez60.github.io/alejandrosuarez.github.io/" target="_blank">Alejandro Suarez</a></li>
+                    <li><a href="https://202-ariana.github.io/Ariana_Waleska_Tejada_Campana/" target="_blank">Ariana Waleska Tejada Campana</a></li>
+                    <li><a href="https://isabel-cai.github.io/" target="_blank">Isabel Cai</a></li>
+                    <li><a href="https://gian-ap.github.io/mi-pagina-gian/" target="_blank">Gian A.P.</a></li>
+                    <li><a href="https://xhyl3m.github.io/Melani-Naomi-Chacnama-Mendoza/" target="_blank">Melani Naomi Chacnama Mendoza</a></li>
                 </ul>
             </div>
         </section>
