--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                 <ul class="item-list">
                     <li>
                         <div class="text-content">
-                            <p>Soy Katherin Velásquez, estudiante de la carrera de Administración de Negocios en la Universidad Católica San Pablo. Me especializo en el área de Finanzas Corporativas y Microfinanzas. Además, tengo una segunda especialización enfocada en startups y emprendimiento. Paralelamente, he desarrollado diversos proyectos de impacto social de manera independiente.</p>
+                            <p>Soy Katherin Velasquez, estudiante de la carrera de Administración de Negocios en la Universidad Católica San Pablo. Me especializo en el área de Finanzas Corporativas y Microfinanzas. Además, tengo una segunda especialización enfocada en startups y emprendimiento. Paralelamente, he desarrollado diversos proyectos de impacto social de manera independiente.</p>
                         </div>
                         <!-- The image has been removed from this section -->
                     </li>
