--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Katherin Leydi Velasquez Parque - Portafolio Personal</title>
+    <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="oG0oUoYtchcWkowC-ieFpGoy79UUIh_ZecOlSOex6cE" />
     <!-- Link to Google Fonts for the Inter font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <!-- Link to Font Awesome for icons -->
